[project]
name = "cacs"
version = "0.1.0"
description = "Coding Agent Config Sync"
requires-python = ">=3.12"
dependencies = ["click>=8.1", "pyyaml>=6.0"]

[project.scripts]
cacs = "cacs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cacs"]
